RESOLVED FIXED267661
REGRESSION (268393@main): [ Monterey Ventura Debug wk2 ] ASSERTION FAILED: willBeComposited == needsToBeComposited(layer, queryData)
https://bugs.webkit.org/show_bug.cgi?id=267661
Summary REGRESSION (268393@main): [ Monterey Ventura Debug wk2 ] ASSERTION FAILED: wi...
Marta Darbinyan
Reported 2024-01-17 16:14:41 PST
Description: http/wpt/mediarecorder/mute-tracks.html Is a flaky crash on macOS Ventura and Monetary Debug on ToT. I could reproduce it by downloading the latest spade. 268393@main - Failed 268392@main - Passed This issue can be bisected to 268393@main using the command: run-webkit-tests --root --exit-after-n-failures 1 --debug http/wpt/mediarecorder/mute-tracks.html History: https://results.webkit.org/?suite=layout-tests&test=http%2Fwpt%2Fmediarecorder%2Fmute-tracks.html&style=debug&version_name=Monterey&version_name=Ventura Diff/Image Diff/Crash Log: stderr: ASSERTION FAILED: willBeComposited == needsToBeComposited(layer, queryData) /Volumes/Data/worker/Apple-Ventura-Debug-Build/build/Source/WebCore/rendering/RenderLayerCompositor.cpp(1251) : void WebCore::RenderLayerCompositor::computeCompositingRequirements(WebCore::RenderLayer *, WebCore::RenderLayer &, WebCore::LayerOverlapMap &, WebCore::RenderLayerCompositor::CompositingState &, WebCore::RenderLayerCompositor::BackingSharingState &, bool &) 1 0x103e66db4 WTFCrash 2 0x2ca0762d0 WebCore::NetworkResourcesData::ResourceData::hasContent() const 3 0x2cb2c3bc0 WebCore::RenderLayerCompositor::computeCompositingRequirements(WebCore::RenderLayer*, WebCore::RenderLayer&, WebCore::LayerOverlapMap&, WebCore::RenderLayerCompositor::CompositingState&, WebCore::RenderLayerCompositor::BackingSharingState&, bool&) 4 0x2cb2c37fc WebCore::RenderLayerCompositor::computeCompositingRequirements(WebCore::RenderLayer*, WebCore::RenderLayer&, WebCore::LayerOverlapMap&, WebCore::RenderLayerCompositor::CompositingState&, WebCore::RenderLayerCompositor::BackingSharingState&, bool&) 5 0x2cb2c3884 WebCore::RenderLayerCompositor::computeCompositingRequirements(WebCore::RenderLayer*, WebCore::RenderLayer&, WebCore::LayerOverlapMap&, WebCore::RenderLayerCompositor::CompositingState&, WebCore::RenderLayerCompositor::BackingSharingState&, bool&) 6 0x2cb2c13b4 WebCore::RenderLayerCompositor::updateCompositingLayers(WebCore::CompositingUpdateType, WebCore::RenderLayer*) 7 0x2ca61f72c WebCore::LocalFrameView::updateCompositingLayersAfterLayout() 8 0x2ca61f770 WebCore::LocalFrameView::updateCompositingLayersAfterLayoutIfNeeded() 9 0x2c96c0f0c WebCore::Document::updateLayout(WTF::OptionSet<WebCore::LayoutOptions>, WebCore::Element const*) 10 0x2ca6351b4 WebCore::LocalFrameView::updateLayoutAndStyleIfNeededRecursive(WTF::OptionSet<WebCore::LayoutOptions>) 11 0x2ca6a1100 WebCore::Page::layoutIfNeeded(WTF::OptionSet<WebCore::LayoutOptions>) 12 0x2ca6a2100 WebCore::Page::updateRendering() 13 0x137f144d4 WebKit::WebPage::updateRendering() 14 0x136fd1f38 WebKit::TiledCoreAnimationDrawingArea::updateRendering(WebKit::TiledCoreAnimationDrawingArea::UpdateRenderingType) 15 0x136fd6a1c WebKit::TiledCoreAnimationDrawingArea::renderingUpdateRunLoopCallback() 16 0x136ff0fb0 WebKit::TiledCoreAnimationDrawingArea::TiledCoreAnimationDrawingArea(WebKit::WebPage&, WebKit::WebPageCreationParameters const&)::$_0::operator()() const 17 0x136ff0f5c WTF::Detail::CallableWrapper<WebKit::TiledCoreAnimationDrawingArea::TiledCoreAnimationDrawingArea(WebKit::WebPage&, WebKit::WebPageCreationParameters const&)::$_0, void>::call() 18 0x2c8e6dd8c WTF::Function<void ()>::operator()() const 19 0x2ca8d445c WebCore::RunLoopObserver::runLoopObserverFired() 20 0x2ca9accf8 WebCore::RunLoopObserver::runLoopObserverFired(__CFRunLoopObserver*, unsigned long, void*) 21 0x1920ed9f0 __CFRUNLOOP_IS_CALLING_OUT_TO_AN_OBSERVER_CALLBACK_FUNCTION__ 22 0x1920ed8dc __CFRunLoopDoObservers 23 0x1920ec514 CFRunLoopRunSpecific 24 0x193065fbc -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 25 0x1930decbc -[NSRunLoop(NSRunLoop) run] 26 0x191d5e594 _xpc_objc_main 27 0x191d5deb4 xpc_main 28 0x1361886d8 WebKit::XPCServiceMain(int, char const**) 29 0x13843e604 WKXPCServiceMain 30 0x100b37fa0 main 31 0x191cb7f28 start com.apple.WebKit.WebContent.Development terminated (pid 29346) for reason: crash LEAK: 1 WebPageProxy Link: https://build.webkit.org/results/Apple-Ventura-Debug-AppleSilicon-WK2-Tests/273128@main%20(4789)/http/wpt/mediarecorder/mute-tracks-crash-log.txt
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-17 16:15:47 PST
Jean-Yves Avenard [:jya]
Comment 2 2024-01-21 22:28:54 PST
EWS
Comment 3 2024-01-24 06:22:01 PST
Committed 273406@main (6bf767bc4141): <https://commits.webkit.org/273406@main> Reviewed commits have been landed. Closing PR #23033 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.